--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -4,7 +4,8 @@ header
   display: flex
   justify-content: space-between
   align-items: center
-  padding: 10px
+  margin:  7px
+  padding: 7px
 
   #header
 
